--- a/Sramek.FX/Sramek.FX.csproj
+++ b/Sramek.FX/Sramek.FX.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{34015C4B-2771-403C-8A52-70479AB6D2E9}</ProjectGuid>
+    <ProjectGuid>{053C3352-B120-4450-8DA4-0A2E8EB557C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Turgo.Common</RootNamespace>
-    <AssemblyName>Turgo.Common</AssemblyName>
+    <RootNamespace>Sramek.FX</RootNamespace>
+    <AssemblyName>Sramek.FX</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,16 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassConfiguration.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoundFactory.cs" />
-    <Compile Include="Classes.cs" />
+    <Compile Include="XMLConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Config\log4net.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
