--- a/Turgo.Common/Turgo.Common.csproj
+++ b/Turgo.Common/Turgo.Common.csproj
@@ -55,9 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassConfiguration.cs" />
+    <Compile Include="Model\TurgoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundFactory.cs" />
     <Compile Include="Classes.cs" />
+    <Compile Include="TurgoSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -65,6 +67,12 @@
   <ItemGroup>
     <Content Include="Config\log4net.xml" />
     <None Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sramek.FX\Sramek.FX.csproj">
+      <Project>{053c3352-b120-4450-8da4-0a2e8eb557c9}</Project>
+      <Name>Sramek.FX</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Accord.3.8.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.8.0\build\Accord.targets')" />
