--- a/Sramek.FX/Sramek.FX.csproj
+++ b/Sramek.FX/Sramek.FX.csproj
@@ -60,6 +60,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="StaticInstance.cs" />
     <Compile Include="Messages.cs" />
