Modification for selecting from exact combinatoric. still has some repetitive pairs, but has it less common.

--- a/Turgo.Common/packages.config
+++ b/Turgo.Common/packages.config
@@ -3,4 +3,5 @@
   <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
   <package id="Fody" version="2.2.1.0" targetFramework="net452" developmentDependency="true" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
+  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net452" />
 </packages>
